# controllers/airtist.controllers.js
@@ -1,11 +1,0 @@
-
-
-//new artist
-
-//update artist info
-
-//delete artist
-
-//get all artists (with pagination and queries)
-
-//get artist by artistId
